feat: Implement delete controller for journal in REST API
